refactor: clean up OrderController and StatisticController, and improve HTML structure in templates