@@ -4,7 +4,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.ModelAttribute;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -13,7 +12,6 @@ import java.util.Locale;
 
 
 import es.dawgrupo2.zendashop.service.OrderService;
-import jakarta.servlet.http.HttpServletRequest;
 import tools.jackson.databind.ObjectMapper;
 
 @Controller
@@ -30,7 +28,7 @@ public class StatisticController {
         
         // time
         LocalDate today = LocalDate.now();
-        Locale spanishLocale = new Locale("es", "ES");
+        Locale spanishLocale = Locale.of("es", "ES");   
 
         LocalDate yesterday = today.minusDays(1);
         LocalDate lastMonth = today.minusMonths(1);
